--- a/app/views/orders/checkout.html.erb
+++ b/app/views/orders/checkout.html.erb
@@ -52,47 +52,53 @@
 <% end %>
 
   <div class="shipping_info">
+    <% if action_name == "finalize" %>
+      <% @invalid = true %>
+    <% else %>
+      <% @invalid = false %>
+    <% end %>
+    
     <%= form_for @order, url: shipping_path(@order), method: :put, class: "form" do |f| %>
       <h3>Customer Information</h3>
 
       <div class="form-group">
         <%= f.label :mailing_name, "Full name" %>
-        <%= f.text_field :mailing_name, required: true, class: 'form-control' %>
+        <%= f.text_field :mailing_name, required: true, class: 'form-control', disabled: @invalid %>
       </div>
 
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.text_field :email, required: true, class: 'form-control' %>
+        <%= f.text_field :email, required: true, class: 'form-control', disabled: @invalid %>
       </div>
 
       <h3>Shipping Address</h3>
 
       <div class="form-group">
         <%= f.label :address1, "Address line 1" %>
-        <%= f.text_field :address1, required: true, class: 'form-control' %>
+        <%= f.text_field :address1, required: true, class: 'form-control', disabled: @invalid %>
       </div>
 
       <div class="form-group">
         <%= f.label :address2, "Address line 2" %>
-        <%= f.text_field :address2, class: 'form-control' %>
+        <%= f.text_field :address2, class: 'form-control', disabled: @invalid %>
       </div>
 
       <div class="form-group">
         <%= f.label :city %>
-        <%= f.text_field :city, required: true, class: 'form-control' %>
+        <%= f.text_field :city, required: true, class: 'form-control', disabled: @invalid %>
       </div>
 
       <div class="form-group">
         <%= f.label :state, class: "form-label" %>
-        <%= f.select :state, Order::US_STATES, { include_blank: true }, { required: true, class: 'form-control' } %>
+        <%= f.select :state, Order::US_STATES, { include_blank: true }, { required: true, class: 'form-control', disabled: @invalid } %>
       </div>
 
       <div class="form-group">
         <%= f.label :mailing_zip, "Zip code" %>
-        <%= f.text_field :mailing_zip, maxlength: 5, required: true, class: 'form-control' %>
+        <%= f.text_field :mailing_zip, maxlength: 5, required: true, class: 'form-control', disabled: @invalid %>
       </div>
 
-      <%= f.submit "Calculate Shipping", class: 'btn btn-danger'%>
+      <%= f.submit "Calculate Shipping", class: 'btn btn-danger', disabled: @invalid %>
     <% end %>
   </div>
 
@@ -112,7 +118,7 @@
           </div>
         </div>
       <% else %>
-        <p>You've select <%= @order.shipping %></p>
+          <p>You've select <strong><%= @order.shipping %></strong></p>
       <% end %>
 
         <hr>
